--- a/src/app/tela-login-cadastro/tela-login-cadastro.component.html
+++ b/src/app/tela-login-cadastro/tela-login-cadastro.component.html
@@ -1,8 +1,38 @@
+<mat-toolbar>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>primeira opção</span>
+    </button>
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>segunda opção</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>notifications_off</mat-icon>
+      <span>terceira opção</span>
+    </button>
+  </mat-menu>
+
+  <span>Heimdall</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+  </button>
+</mat-toolbar>
+
+
 <div class="center-content">
   <mat-card class="example-card">
     <mat-card-header>
-      <mat-card-title>Heimdall</mat-card-title>
-      <mat-card-subtitle>Login/Entrar</mat-card-subtitle>
+      <mat-card-title>Área usuário</mat-card-title>
+      <mat-card-subtitle style="margin-left: 1cm;">Login/Cadastro</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <mat-tab-group>
