--- a/src/app/tela-login-cadastro/tela-login-cadastro.component.scss
+++ b/src/app/tela-login-cadastro/tela-login-cadastro.component.scss
@@ -1,30 +1,20 @@
-
 .example-card {
-    max-width: 400px;
-}
-  
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+  max-width: 700px;
 }
 .center-content {
-    margin-top: 100px;
-    text-align: -webkit-center;
-}
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 91vh; 
+  text-align: center; 
+  background-color: rgb(188, 188, 188);
 }
 
 .example-full-width {
-    margin-top: 10px;
+  margin-top: 1cm;
   width: 100%;
 }
-.mat-button{
-    margin-top: 10px;
-  width: 100%;
-  color: white;
-  height: 40px;
-  background-color: #3F51B5;
+
+.example-spacer {
+  flex: 1 1 auto;
 }
