--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
+
+@include mat.core();
+
+$palette-black-white: (
+ 50: #e8eaf6,
+ 100: #ededed,
+ 200: #dbdbdb,
+ 300: #c6c6c6,
+ 400: #a9a9a9,
+ 500: #8b8b8b,
+ 600: #545454,
+ 700: #484848,
+ 800: #202020,
+ 900: #000000,
+ contrast: (
+   50: rgba(black, 0.87),
+   100: rgba(black, 0.87),
+   200: rgba(black, 0.87),
+   300: white,
+ )
+);
+$my-app-primary: mat.define-palette($palette-black-white, 900);
+$my-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$my-app-warn: mat.define-palette(mat.$red-palette);
+
+$my-app-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $my-app-primary,
+      accent: $my-app-accent,
+      warn: $my-app-warn,
+    ),
+  )
+);
+
+@include mat.all-component-themes($my-app-theme);
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
