feat: tela inicial

--- a/src/app/tela-inicial/tela-inicial.component.html
+++ b/src/app/tela-inicial/tela-inicial.component.html
@@ -1,28 +1,46 @@
 <mat-toolbar>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>primeira opção</span>
     </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>primeira opção</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>segunda opção</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>terceira opção</span>
-      </button>
-    </mat-menu>
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>segunda opção</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>notifications_off</mat-icon>
+      <span>terceira opção</span>
+    </button>
+  </mat-menu>
 
-    <span>HEIMDALL</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+  <span>HEIMDALL</span>
+  <div class="manuSpacer">
+    <a>DOCS</a>
+    <a>BLOG</a>
+    <a>SOBRE</a>
+  </div>
+  <div class="search-container">
+    <input type="search" aria-label="search" placeholder="Search" />
+    <div class="box-icon-search"><mat-icon class="search">search</mat-icon></div>
+    <div class="search-box-shortcut">/</div>
+  </div>
 </mat-toolbar>
+<div class="box-container">
+  <div class="logo-central"></div>
+  <div class="tryNow">
+    <p>
+      Vigilância Acadêmica Inspirada por Heimdall.
+      </p>
+    <button mat-raised-button color="primary">Tente agora!</button>
+  </div>
+  <div class="top-box">
+
+  </div>
+  <div class="bottom-box">
+
+  </div>
+</div>
