--- a/src/app/tela-login-cadastro/tela-login-cadastro.component.html
+++ b/src/app/tela-login-cadastro/tela-login-cadastro.component.html
@@ -5,7 +5,7 @@
   <mat-menu #menu="matMenu">
     <button mat-menu-item>
       <mat-icon>dialpad</mat-icon>
-      <span>primeira opção0</span>
+      <span>primeira opção</span>
     </button>
     <button mat-menu-item disabled>
       <mat-icon>voicemail</mat-icon>
