--- a/src/app/tela-inicial/tela-inicial.component.scss
+++ b/src/app/tela-inicial/tela-inicial.component.scss
@@ -158,3 +158,14 @@
   border-width: 23vw 100vw 0vw;
   border-color: #ffd740de transparent transparent transparent;
 }
+
+
+.tituloH{
+  font-size: 2em;
+}
+
+::ng-deep .mat-mdc-menu-trigger .mat-icon{
+  height: 50px;
+  width: 29px;
+  font-size: 33px;
+}
