--- a/src/app/tela-edicao-salas/sala-modal/sala-modal.component.html
+++ b/src/app/tela-edicao-salas/sala-modal/sala-modal.component.html
@@ -3,6 +3,9 @@
   {{ 'Professor(a): ' + data.teacher }}
 </mat-dialog-content>
 <mat-dialog-content>
+  {{ 'Horário: ' + data.schedule }}
+</mat-dialog-content>
+<mat-dialog-content>
   {{ 'Assentos: ' + data.seats }}
 </mat-dialog-content>
 <mat-dialog-content>
