--- a/src/app/tela-edicao-salas/tela-edicao-salas.component.html
+++ b/src/app/tela-edicao-salas/tela-edicao-salas.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar>
-  <span class="tituloH">HEIMDALL</span>
+  <span (click)="returnToHome()" class="tituloH">HEIMDALL</span>
+  <span class="tituloInst">IFSP - SPO</span>
 </mat-toolbar>
 
 <mat-sidenav-container>
@@ -11,31 +12,42 @@
           <input matInput placeholder="Nome da Sala" [(ngModel)]="filterName">
         </mat-form-field>
       </mat-list-item>
+
       <mat-list-item class="professores">
         <mat-form-field>
           <mat-label>Professor:</mat-label>
-          <mat-select [disabled]="disableSelect.value" >
-            <mat-option (onSelectionChange)="atualiza($event)" *ngFor="let teacher of teachers" [value]="teacher.value">{{ teacher.name}}</mat-option>
+          <mat-select #teacherHtml [disabled]="disableSelect.value" >
+            <mat-option (click)="atualiza(teacher.value, 'professores')" *ngFor="let teacher of teachers" [value]="teacher.value">{{ teacher.name}}</mat-option>
           </mat-select>
         </mat-form-field>
       </mat-list-item>
-      <div class="minmax">
 
+      <mat-list-item class="professores">
+        <mat-form-field>
+          <mat-label>Horário:</mat-label>
+          <mat-select #scheduleHtml [disabled]="disableSelect.value" >
+            <mat-option (click)="atualiza(schedule.value, 'horario')" *ngFor="let schedule of schedules" [value]="schedule.value">{{ schedule.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-list-item>
+
+      <div class="minmax">
         <mat-list-item>
           <mat-form-field>
-          <input matInput type="number" placeholder="Mín. Assentos" [(ngModel)]="minSeats">
+          <input appOnlyNumbers matInput type="text" placeholder="Mín. Assentos" [(ngModel)]="minSeats">
         </mat-form-field>
       </mat-list-item>
 
       <mat-list-item>
         <mat-form-field>
-          <input matInput type="number" placeholder="Máx. Assentos" [(ngModel)]="maxSeats">
+          <input appOnlyNumbers matInput type="text" placeholder="Máx. Assentos" [(ngModel)]="maxSeats">
         </mat-form-field>
       </mat-list-item>
       </div>
 
-      <mat-list-item>
+      <mat-list-item class="btnsFiltros">
         <button mat-raised-button color="primary" (click)="applyFilters()">Aplicar Filtros</button>
+        <button mat-raised-button color="primary" (click)="clearFilters([teacherHtml, scheduleHtml])">Limpar Filtros</button>
       </mat-list-item>
     </mat-list>
   <mat-list class="NovaSala">
@@ -45,16 +57,25 @@
   </mat-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div class="rooms" *ngIf="showRooms">
-      <div class="sala-container">
-        <ng-container *ngFor="let room of filteredRooms; let i = index" class="room">
-          <mat-card class="sala-card" (click)="openModal(room)">
-            {{ room.name }}
-          </mat-card>
-          <!-- Quebrar a cada 4 retângulos -->
-          <div *ngIf="i % 4 === 3" class="break"></div>
-        </ng-container>
+    <div class="boxRooms">
+      <div class="rooms" *ngIf="filteredRooms.length > 0; else semDados">
+        <div class="sala-container">
+          <ng-container *ngFor="let room of filteredRooms; let i = index" class="room">
+            <mat-card class="sala-card" (click)="openModal(room)">
+              {{ room.name }}
+            </mat-card>
+            <!-- Quebrar a cada 4 retângulos -->
+            <div *ngIf="i % 4 === 3" class="break"></div>
+          </ng-container>
+        </div>
       </div>
+      <ng-template #semDados>
+        <div class="semResultados">
+          <mat-card>
+            <mat-card-content>Realize uma nova pesquisa.</mat-card-content>
+          </mat-card>
+        </div>
+      </ng-template>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
