--- a/src/app/tela-inicial/tela-inicial.component.scss
+++ b/src/app/tela-inicial/tela-inicial.component.scss
@@ -81,14 +81,15 @@
 }
 
 .box-container {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10%;
   .logo-central {
-    position: absolute;
-    top: 15%;
-    right: 60%;
     z-index: 999;
     width: 225px;
     height: 225px;
+    margin-right: 5%;
     background-image: url(../../assets/images/heimdall.logo.png);
   }
   .tryNow {
@@ -96,9 +97,6 @@
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.3);
     padding: 5%;
-    position: absolute;
-    top: 15%;
-    right: 20%;
     border-radius: 10px;
     z-index: 999;
     justify-content: center;
@@ -121,43 +119,43 @@
   }
 }
 
-.top-box {
-  background-color: #ffd740de;
-  height: 300px;
-  position: relative;
-  overflow: hidden;
-}
+// .top-box {
+//   background-color: #ffd740de;
+//   height: 300px;
+//   position: relative;
+//   overflow: hidden;
+// }
 
-.top-box::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0;
-  border-style: solid;
-  border-width: 23vw 100vw 0vw;
-  border-color: transparent transparent transparent #ffd740de;
-}
+// .top-box::before {
+//   content: "";
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 0;
+//   border-style: solid;
+//   border-width: 23vw 100vw 0vw;
+//   border-color: transparent transparent transparent #ffd740de;
+// }
 
-.bottom-box {
-  background-color: #ffd740de;
-  height: 300px;
-  position: relative;
-  overflow: hidden;
-}
+// .bottom-box {
+//   background-color: #ffd740de;
+//   height: 300px;
+//   position: relative;
+//   overflow: hidden;
+// }
 
-.bottom-box::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 23vw 100vw 0vw;
-  border-color: #ffd740de transparent transparent transparent;
-}
+// .bottom-box::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 0;
+//   height: 0;
+//   border-style: solid;
+//   border-width: 23vw 100vw 0vw;
+//   border-color: #ffd740de transparent transparent transparent;
+// }
 
 .tituloH {
   font-size: 2em;
