--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -26,3 +26,50 @@
   <span class="tituloH">HEIMDALL</span>
 
 </mat-toolbar>
+<div class="header">
+  <h2>Cursos</h2>
+</div>
+<div class="container">
+  <div class="cards">
+    <mat-card class="novoCard">
+      <mat-card-header>
+        <mat-card-title>Adicione um novo curso</mat-card-title>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button>Adicionar</button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Licenciatura Matemática</mat-card-title>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button>Editar</button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Elétrica</mat-card-title>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button>Editar</button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Licenciatura Química</mat-card-title>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button>Editar</button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Análise e desenvolvimento de sistemas</mat-card-title>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-button>Editar</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
