--- a/src/app/tela-login-cadastro/tela-login-cadastro.component.html
+++ b/src/app/tela-login-cadastro/tela-login-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="center-content">
-  <mat-card class="example-card">
+  <mat-card class="example-cardLoginCadastro">
     <mat-card-content>
       <mat-tab-group [(selectedIndex)]="foco">
         <mat-tab #tabLogin label="Login">
