--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -4,9 +4,7 @@
   </button>
   <mat-menu #menu="matMenu">
     <button (click)="redirectProfile()" mat-menu-item>
-      <mat-icon>
-        account_circle
-      </mat-icon>
+      <mat-icon> account_circle </mat-icon>
       <span>Perfil</span>
     </button>
     <button mat-menu-item disabled>
@@ -24,139 +22,45 @@
   </mat-menu>
 
   <span class="tituloH">HEIMDALL</span>
-
 </mat-toolbar>
-<div class="header">
-  <h2>Cursos</h2>
-</div>
-<div class="container">
-  <div class="cards">
-    <mat-card class="novoCard card-adicionar-novo-curso card-width">
-      <mat-card-header>
-        <mat-card-title>Adicione um novo curso</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Adicionar</button>
-      </mat-card-actions>
-    </mat-card>
-
-
-    <div *ngIf="courses.length > 0" class="example-card ">
-      <mat-card *ngFor="let course of courses.slice(0, 4)" class="card-width">
+<div *ngFor="let block of data">
+  <div class="header">
+    <h2>{{ block.name }}</h2>
+  </div>
+  <div class="container">
+    <div class="cards">
+      <mat-card class="novoCard card-adicionar-novo-curso card-width">
         <mat-card-header>
-          <mat-card-title class="title-card">{{ course.name }}</mat-card-title>
+          <mat-card-title>{{
+            "Adicione mais " + block.name + "."
+          }}</mat-card-title>
         </mat-card-header>
         <mat-card-actions>
-          <button (click)="editCourse(course)" mat-button>Editar</button>
+          <button (click)="createItem(block.name)" mat-button>Adicionar</button>
         </mat-card-actions>
       </mat-card>
 
-    </div>
+      <div *ngIf="block.arr.length > 0" class="example-card">
+        <mat-card *ngFor="let item of block.arr.slice(0, 2)" class="card-width">
+          <mat-card-header>
+            <mat-card-title class="title-card">{{ item.name }}</mat-card-title>
+          </mat-card-header>
+          <mat-card-actions>
+            <button (click)="editItem(block.name, item)" mat-button>
+              Editar
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
 
-    <mat-card class="novoCard card-width">
-      <mat-card-header>
-        <mat-card-title>Ver Mais</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Buscar</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</div>
-<div class="header">
-  <h2>Administradores</h2>
-</div>
-<div class="container">
-  <div class="cards">
-    <mat-card class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Adicione um novo Administrador</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Adicionar</button>
-      </mat-card-actions>
-    </mat-card>
-
-    <div *ngIf="admins.length > 0">
-      <mat-card *ngFor="let admin of admins.slice(0, 2)" class="example-card">
+      <mat-card *ngIf="block.arr.length > 2" class="novoCard card-width">
         <mat-card-header>
-          <mat-card-title>{{ admin.name }}</mat-card-title>
+          <mat-card-title>Ver Mais</mat-card-title>
         </mat-card-header>
         <mat-card-actions>
-          <button (click)="removeUser(admin)" mat-button>Remover</button>
+          <button (click)="seeMore(block.arr)" mat-button>Buscar</button>
         </mat-card-actions>
       </mat-card>
     </div>
-
-    <mat-card *ngIf="admins.length > 2" class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Ver Mais</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Buscar</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</div>
-<div class="header">
-  <h2>Professores</h2>
-</div>
-<div class="container">
-  <div class="cards">
-    <mat-card class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Adicione um novo Professor</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Adicionar</button>
-      </mat-card-actions>
-    </mat-card>
-
-    <mat-card class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Adicione um novo Professor</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Adicionar</button>
-      </mat-card-actions>
-    </mat-card>
-
-    <mat-card class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Adicione um novo Professor</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Adicionar</button>
-      </mat-card-actions>
-    </mat-card>
-
-    <mat-card class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Adicione um novo Professor</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Adicionar</button>
-      </mat-card-actions>
-    </mat-card>
-<!--
-    <div *ngIf="teachers.length > 0">
-      <mat-card *ngFor="let teacher of teachers.slice(0, 2)" class="example-card">
-        <mat-card-header>
-          <mat-card-title>{{ teacher.name }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-actions>
-          <button (click)="removeUser(teacher)" mat-button>Remover</button>
-        </mat-card-actions>
-      </mat-card>
-    </div> -->
-
-    <mat-card *ngIf="teachers.length > 2" class="novoCard">
-      <mat-card-header>
-        <mat-card-title>Ver Mais</mat-card-title>
-      </mat-card-header>
-      <mat-card-actions>
-        <button (click)="createCourse()" mat-button>Buscar</button>
-      </mat-card-actions>
-    </mat-card>
   </div>
 </div>
