--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -16,7 +16,7 @@
       <span>Professores</span>
     </button>
     <button (click)="redirectReserve()" mat-menu-item>
-      <mat-icon>notifications_off</mat-icon>
+      <mat-icon>meeting_room</mat-icon>
       <span>Reservas</span>
     </button>
   </mat-menu>
