--- a/src/app/tela-reservas/tela-reservas.component.scss
+++ b/src/app/tela-reservas/tela-reservas.component.scss
@@ -1,24 +1,32 @@
 .example-spacer {
-    flex: 1 1 auto;
-  }
-  
-  
-  .mat-toolbar {
-    background: #ffd740de;
-    color: var(--mat-toolbar-container-text-color);
-  }
-  
-  .logo-central {
-    width: 50px;
-    height: 50px;
-    background-image: url(../../assets/images/heimdall.logo.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
-  .tituloH {
-    font-size: 2em;
-  }
+  flex: 1 1 auto;
+}
 
-  
+.mat-toolbar {
+  background: #ffd740de;
+  color: var(--mat-toolbar-container-text-color);
+}
+
+.logo-central {
+  width: 50px;
+  height: 50px;
+  background-image: url(../../assets/images/heimdall.logo.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.tituloH {
+  font-size: 2em;
+}
+
+.sala-buttons-container {
+  display: flex;
+  flex-wrap: wrap; /* Adicionando esta linha para que os botões quebrem para uma nova linha */
+  gap: 16px; /* Espaçamento entre os botões */
+}
+
+.sala-button {
+  flex-basis: calc(20% - 16px); /* Defina a largura do botão para ocupar 20% da largura e subtraia o espaçamento */
+}
+
