--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -22,6 +22,7 @@
     </button>
   </mat-menu>
     <span class="tituloH">HEIMDALL</span>
+    <button mat-button (click)="novaSala()"  style="margin-left: 28cm;">Criar nova sala</button>
   </mat-toolbar>
   
   <div class="sala-buttons-container">
