--- a/src/app/tela-reservas/tela-reservas.component.scss
+++ b/src/app/tela-reservas/tela-reservas.component.scss
@@ -22,11 +22,11 @@
 
 .sala-buttons-container {
   display: flex;
-  flex-wrap: wrap; /* Adicionando esta linha para que os botões quebrem para uma nova linha */
-  gap: 16px; /* Espaçamento entre os botões */
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
 .sala-button {
-  flex-basis: calc(20% - 16px); /* Defina a largura do botão para ocupar 20% da largura e subtraia o espaçamento */
+  flex-basis: calc(20% - 16px);
 }
 
