botão delete funcionando

--- a/src/app/tela-reservas/tela-reserva-detalhadas/tela-reserva-detalhadas.component.html
+++ b/src/app/tela-reservas/tela-reserva-detalhadas/tela-reserva-detalhadas.component.html
@@ -8,4 +8,5 @@
     <p>Projetor: {{ sala.projetor }}</p>
     
     <button (click)="editarSala()">Editar Sala</button>
+    <button (click)="deletarSala()">Deletar Sala</button>
 </div>
