inicio da reserva de salas

--- a/src/app/tela-reservas/tela-reserva-detalhadas/tela-reserva-detalhadas.component.html
+++ b/src/app/tela-reservas/tela-reserva-detalhadas/tela-reserva-detalhadas.component.html
@@ -1,12 +1,16 @@
 <div class="detalhes-sala">
-    <h2>Detalhes da Sala {{sala.numero}}</h2>
-    <p>Cadeiras: {{ sala.cadeiras }}</p>
+    <div class="header">
+        <h2>Detalhes da Sala {{sala.numero}}</h2>
+        <button class="reservar-btn" (click)="reservarSala()">Reservar</button>
+    </div>
+
+    <p style="margin-top: 20px;">Cadeiras: {{ sala.cadeiras }}</p>
     <p>Mesas: {{ sala.mesas }}</p>
     <p>Cadeiras por Mesa: {{ sala.cadeirasPorMesa }}</p>
     <p>Computadores: {{ sala.computadores }}</p>
     <p>Lousa: {{ sala.lousa }}</p>
     <p>Projetor: {{ sala.projetor }}</p>
-    
-    <button (click)="editarSala()">Editar Sala</button>
-    <button (click)="deletarSala()">Deletar Sala</button>
+
+    <button (click)="editarSala()">Editar</button>
+    <button (click)="deletarSala()">Deletar</button>
 </div>
